test_bak/bad1.cminor
xInt : integer;
yInt : integer;

xBoolean : boolean;
yBoolean : boolean;

xChar : char;
yChar : char;

xStr : string;
yStr : string;

xIntArray : array [5] integer;


funArr: function void (x : array [10] integer); // correct
funArr2 : function void (x : array[] integer); // correct

main : function void (x : integer, y : array [] integer) = {

		// assign
			xInt = yInt;
				xBoolean = yBoolean;
					xIntArray = yIntArray;

						// 5 errors
							main = main; // error
								xInt = xBoolean;
									xBoolean = xChar;
										xChar = xStr;
											xStr = xIntArray;

												main(x, yStr);

}
